# The-One-Billion-Row-Challenge

./: .gitignore  10k.txt  README.md
c++/: .gitignore  CMakeLists.txt  Makefile  main.cpp  vcpkg.json
c++/.cache/clangd/index/: main.cpp.0A39C9E7B9EA4682.idx
golang/: Makefile  go.mod  go.sum  mem.pprof
golang/attempt1/: cpu.pprof  main.go  mem.pprof
golang/attempt2/: main.go  mem.pprof
golang/attempt3/: main.go  mem.pprof
golang/attempt4/: cpu.pprof
golang/src/: cpu.pprof  main.go  mem.pprof
